fixed spacing in offerPanel

--- a/src/components/offerPanel.scss
+++ b/src/components/offerPanel.scss
@@ -52,8 +52,6 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        margin: 30px 0px;
-        padding: 10px;
         height: 45px;
 
         .fa-spinner {
@@ -109,11 +107,10 @@
 @media only screen and (max-width: 600px) {
   .offer-container {
     margin: 20px 0px 0px 0px;
-    padding: 10px;
+    padding: 0;
 
     .offer {
-      flex-flow: column;
-      padding: 10px;
+      flex-flow: column-reverse;
       width: 100%;
       justify-content: center;
       align-content: center;
@@ -127,25 +124,30 @@
           font-size: 1.2em;
           text-align: center;
           width: auto;
+          margin: 5px 10px;
         }
         h3 {
           width: auto;
           font-size: 2em;
           text-align: center;
+          margin: 5px 10px;
         }
         .price {
           font-size: 2em;
           text-align: center;
+          margin: 5px 10px;
         }
 
         p {
           font-size: 1em;
           text-align: center;
+          margin: 5px 10px;
         }
 
         .timer {
           font-size: 2.5em;
           text-align: center;
+          margin: 50px 10px;
         }
 
         .spinner {
@@ -155,6 +157,7 @@
 
         .shop-btn {
           align-self: center;
+          margin: 10px 0px 40px 0px;
 
           button {
             width: 200px;
@@ -166,9 +169,9 @@
     }
 
     img {
-      height: auto;
-      width: 100%;
-      padding: 30px 0 0 0;
+      height: 250px;
+      width: auto;
+      align-self: center;
     }
   }
 }
