--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,6 @@ body {
   padding: 0;
   font-family: "Roboto";
   background-color: #f5f5f5;
-  overflow-x: hidden;
 }
 
 code {
